--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* RESET BÁSICO */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -13,53 +12,77 @@ body {
   padding: 20px;
 }
 
+.linhatopo {
+  color: #465eff;
+  width: 40%;
+  height: 10%;
+}
 nav ul {
   list-style: none;
   display: flex;
   justify-content: flex-end;
-  gap: 15px;
+  gap: 3%;
   margin-bottom: 20px;
+  font-size: 1.2rem;
+  position: relative;
+  top: 20%;
+  left: 10%;
 }
 
 nav a {
   font-family: Calibri, sans-serif;
   text-decoration: none;
   color: #465eff;
-  font-weight: 900;
-  font-size: 24px;
+  font-weight: 600;
 }
-.itemacessar {
+#itemacessar {
   font-weight: bold;
   background-color: #fcfc30;
-  padding: 5px 10px;
-  border-radius: 15px;
+  border-radius: 90%;
+  padding: 1% 5%;
 }
 
-header h1 {
-  font-size: 2rem;
-  margin-bottom: 10px;
+#titulo {
+  font-size: 1.5rem;
+  position: relative;
+  left: 4%;
 }
 
-header h4 {
-  font-size: 1.4rem;
+#buscar {
+  font-size: 0.8rem;
+  margin-bottom: 10%;
+  justify-content: center;
+  text-align: right;
+  color: #bfbfbf;
+  width: 90%;
+  padding: 5% 5%;
+  position: absolute;
+  top: 5%;
+  right: 3.05%;
+}
+
+#subtitulo {
+  font-size: 1.2rem;
   color: #535353;
-  margin-bottom: 30px;
+  margin-bottom: 17%;
+  position: relative;
+  left: 4%;
 }
 
 main {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 20%;
   justify-content: center;
   align-items: center;
-  margin-bottom: 40px;
+  margin-bottom: 40%;
 }
 
 main img {
   max-width: 100%;
   height: auto;
   border-radius: 8px;
-  flex: 1 1 300px;
+  flex: 1 1 300%;
   object-fit: contain;
 }
 
@@ -67,32 +90,28 @@ footer {
   text-align: center;
   color: #465eff;
   font-size: 0.9rem;
-  border-top: 1px solid #ddd;
-  padding-top: 20px;
+  border-top: 1% solid #ddd;
+  padding-top: 20%;
 }
-.logo-topo {
+#logo-topo {
   position: relative;
-  max-width: 100px;
-  margin-top: 0px;
-  right: 1200px;
-  width: 10px;
-
-
+  max-width: 6%;
+  height: 12%;
+  right: 96%;
 }
 /* BOTÃO DE CADASTRO */
-.botao-topo {
+#botao-topo {
   font-size: 1.5rem;
-  border-radius: 20px;
-  padding: 10px 85px;
+  border-radius: 12px;
+  padding: 1% 8%;
   background-color: #fcfc30;
   color: #465eff;
   font-weight: bold;
-  cursor: pointer;
   border: none;
   transition: background-color 0.3s ease;
-  position: center;
-  text-align: center;
-  display: grid;
+  position: relative;
+  left: 20%;
+  bottom: 96px;
 }
 
 .botao-topo:hover {
@@ -100,7 +119,7 @@ footer {
 }
 
 /* ELIPSE */
-.elipse {
+#elipse {
   width: 242px;
   height: 240px;
   background-color: #fcfc30;
@@ -109,39 +128,21 @@ footer {
   bottom: 20px;
 }
 
-.text-busca {
-  text-align: top;
-  margin: 50px;
-  color: #465eff;
-  position: relative;
-  left: 800px;
-  top: -180px;
-}
-
 main h1 {
   font-size: 1.1rem;
-  text-align: left;
+  text-align: center;
   width: 100%;
-  margin-top: 20px;
-  justify-content: center;
+  margin-top: 20;
 }
 
 /* RESPONSIVIDADE */
-@media (max-width: 600px) {
+@media (max-width: 600%) {
   nav ul {
-    flex-direction: grid;
-    padding: 15px;
-    margin: auto;
-    width: 400px;
-    height: 100%;
+    flex-direction: column;
     align-items: center;
-    text-align: center;
-    gap: 10px;
+    gap: 10%;
   }
-  .logo-topo {
-    position: relative;
-    top: 12px;
-  }
+
   main {
     flex-direction: column;
   }
@@ -155,7 +156,7 @@ main h1 {
   }
 
   .elipse {
-    width: 80px;
-    height: 85px;
+    width: 80%;
+    height: 85%;
   }
 }
